--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  background-color: black;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.slick, .awesome {
+  width: 80%;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image {
+  width: auto;
+  height: auto;
+  margin: 0 20px;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  margin: 0 10px;
+}
+
+.slick-slide {
+  transition: transform 0.5s ease;
+}
+
+.slick-center .image img {
+  transform: scale(1.2); /* Adjust the scale value as needed */
 }
